--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,13 @@
     "manifest_version": 3,
     "name": "Domain ICP Info",
     "short_name": "ICP",
-    "version": "1.2.1",
+    "version": "1.2.2",
     "description": "Get the ICP info of a domain, ICP备案信息查询插件",
-    "permissions": ["activeTab"],
+    "permissions": [
+      "activeTab",
+      "tabs",
+      "storage"
+    ],
     "host_permissions": [ "http://*/*", "https://*/*"],
     "action": {
       "default_icon": "icon.png",
